--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
