--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.0.6",
-    "vite": "^5.1.4"
+    "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -34,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.2.8"
   }
 }
